# funding-notifiation

./: Cargo.toml  README.md  readme.md
src/: api_limits.rs  db.rs  main.rs  time.rs  ton_bot.rs
src/exchanges/: binance.rs  binx.rs  bitget.rs  bitmart.rs  bitunix.rs  bybit.rs  coinex.rs  coinw.rs  gate.rs  htx.rs  kucoin.rs  mexc.rs  mod.rs  okx.rs  whitebit.rs
