[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.36", features = ["full"]}
async-tungstenite = { version = "0.23", features = ["tokio-native-tls"] }
url = "2.5"

serde = {version = "1", features = ["derive"]}
serde_json = "1"
reqwest = { version = "*", features = ["json","blocking"] }
futures = "0.3"

chrono = {version = "0.4", features = ["clock"]}
chrono-tz = "0.8"
sqlx = {version = "0.7", features = ["runtime-tokio", "sqlite", "macros"]}

regex = "1"
dashmap = "5"